--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "heartbeats": "^5.0.1",
     "laravel-mix": "^4.0.15",
     "lodash": "^4.17.11",
+    "ms-to-timecode": "^0.1.2",
     "timecode-boss": "^3.1.1",
     "uikit": "^3.1.4"
   },
